# exodb

./: Cargo.toml  README.md  desktop.ini
src/: error.rs  files.txt  lib.rs  redb.rs  store.rs
src/async/: mod.rs
src/codecs/: codec.rs  error.rs  mod.rs  ordered_when_encoded.rs  utils.rs
src/codecs/bincode_native/: codec.rs  mod.rs  ordered_when_encoded.rs
src/codecs/bincode_serde/: codec.rs  mod.rs  ordered_when_encoded.rs  serde_safety.rs
src/codecs/bitcode_native/: codec.rs  mod.rs  ordered_when_encoded.rs
src/codecs/bitcode_serde/: codec.rs  mod.rs  ordered_when_encoded.rs  serde_safety.rs
src/codecs/borsh/: codec.rs  mod.rs  ordered_when_encoded.rs
src/codecs/codecs/: mod.rs
src/codecs/musli_descriptive/: codec.rs  mod.rs  ordered_when_encoded.rs
src/codecs/musli_storage/: codec.rs  mod.rs  ordered_when_encoded.rs
src/codecs/musli_wire/: codec.rs  mod.rs  ordered_when_encoded.rs
src/codecs/postcard_serde/: codec.rs  mod.rs  ordered_when_encoded.rs  serde_safety.rs
src/codecs/rkyv/: codec.rs
src/codecs/rmp_serde/: codec.rs  mod.rs  ordered_when_encoded.rs  serde_safety.rs
src/codecs/zerocopy/: codec.rs  mod.rs  ordered_when_encoded.rs
src/core/key_ring/: key.rs
src/core/key_ring/kdf/: blake3.rs  error.rs  mod.rs  sha256.rs
src/db/: database.rs  mod.rs
src/db/tables/: mod.rs  read.rs  write.rs
src/db/transactions/: mod.rs  read.rs  write.rs
src/indexing/: mod.rs
src/indexing/key_set/: mod.rs  readable_key_set.rs  upgradable_key_set.rs
src/indexing/key_set/ahash_set/: archived_key_set.rs  mod.rs  readable_key_set.rs  upgradable_key_set.rs
src/indexing/key_set/b_tree_set/: archived_key_set.rs  mod.rs  readable_key_set.rs  upgradable_key_set.rs
src/indexing/key_set/hash_set/: archived_key_set.rs  mod.rs  readable_key_set.rs  upgradable_key_set.rs
src/indexing/key_set/vec/: archived_key_set.rs  mod.rs  readable_key_set.rs  upgradable_key_set.rs
src/layers/: error.rs  mod.rs  value.rs
src/layers/compressors/: brotli.rs  bzip2.rs  compress_error.rs  compressible.rs  compressor.rs  decompress_error.rs  error.rs  flate2_deflate.rs  flate2_gzip.rs  flate2_zlib.rs  level.rs  lz4_flex.rs  method.rs  mod.rs  zstd.rs
src/layers/compressors/core/: compressible.rs  level.rs  method.rs  mod.rs
src/layers/compressors/core/dictionary_bytes/: mod.rs  standard.rs  zstd.rs
src/layers/compressors/core/errors/: compress.rs  compression.rs  decompress.rs  mod.rs
src/layers/compressors/core/traits/: dictionary.rs  mod.rs  standard.rs
src/layers/compressors/impls/: brotli.rs  bzip2.rs  flate2_deflate.rs  flate2_gzip.rs  mod.rs
src/layers/compressors/impls/flate2_zlib/: dictionary.rs  mod.rs  standard.rs
src/layers/compressors/impls/lz4_flex/: dictionary.rs  mod.rs  standard.rs
src/layers/compressors/impls/zstd/: dictionary.rs  mod.rs  standard.rs
src/layers/core/: mod.rs  value.rs
src/layers/core/bytes/: compression.rs  correction.rs  encryption.rs  error.rs  metadata.rs  mod.rs  read.rs  write.rs
src/layers/core/bytes/compression/: mod.rs  standard.rs
src/layers/core/bytes/serialization/: standard.rs
src/layers/core/bytes/tests/: bench.rs  mod.rs  quickcheck.rs  simple.rs
src/layers/core/descriptors/: direction.rs  error.rs  layer.rs  mod.rs
src/layers/core/tail_readers/: error.rs  mod.rs  tail_reader.rs  tail_reader_bytes.rs  tail_reader_mut.rs
src/layers/core/value_or_bytes/: error.rs  mod.rs
src/layers/correctors/: correctable.rs  corrector.rs  error.rs  level.rs  metadata.rs  method.rs  mod.rs  protect_error.rs  recover_error.rs
src/layers/correctors/core/: correctable.rs  corrector.rs  level.rs  metadata.rs  method.rs  mod.rs
src/layers/correctors/core/errors/: correction.rs  mod.rs  protect.rs  recover.rs
src/layers/correctors/impls/: mod.rs
src/layers/correctors/reed_solomon/: corrector.rs  error.rs  mod.rs  reed_solomon.rs  tests.rs
src/layers/descriptors/: descriptor.rs  direction.rs  error.rs  layer.rs  mod.rs
src/layers/encryptors/: decrypt_error.rs  encrypt_error.rs  encryptable.rs  encryptor.rs  error.rs  method.rs  mod.rs
src/layers/encryptors/aes_gcm/: encryptor.rs  mod.rs
src/layers/encryptors/chacha20/: encryptor.rs  mod.rs
src/layers/encryptors/core/: encryptable.rs  encryptor.rs  method.rs  mod.rs
src/layers/encryptors/impls/: mod.rs
src/layers/encryptors/parameters/: error.rs  mod.rs
src/layers/serializers/: deserialize_error.rs  error.rs  method.rs  mod.rs  ordered_when_serialized.rs  serializable.rs  serialize_error.rs  serializer.rs  utils.rs
src/layers/serializers/bincode_native/: ordered_when_serialized.rs  serializer.rs
src/layers/serializers/bincode_serde/: mod.rs  serde_safety.rs  serializer.rs
src/layers/serializers/bitcode_native/: mod.rs  ordered_when_serialized.rs
src/layers/serializers/bitcode_serde/: mod.rs  serde_safety.rs
src/layers/serializers/borsh/: mod.rs  ordered_when_serialized.rs  serializer.rs
src/layers/serializers/core/: method.rs  mod.rs  serializable.rs
src/layers/serializers/impls/: mod.rs
src/layers/serializers/musli_descriptive/: serializer.rs
src/layers/serializers/musli_storage/: mod.rs  serializer.rs
src/layers/serializers/postcard_serde/: mod.rs  serde_safety.rs
src/layers/serializers/rkyv/: codec.rs  mod.rs
src/layers/serializers/rmp_serde/: mod.rs  ordered_when_serialized.rs  serde_safety.rs  serializer.rs
src/layers/serializers/zerocopy/: mod.rs  ordered_when_serialized.rs  serializer.rs
src/layers/tail_reader/: error.rs  mod.rs
src/layers/value_buf/: error.rs  metadata.rs  mod.rs  value_buf.rs
src/querying/: mod.rs
src/redb/: mod.rs
src/redb/tables/: mod.rs  read.rs
src/redb/transactions/: read.rs  write.rs
src/typed/: database.rs  mod.rs
src/typed/table_mut/: extract_if.rs  mod.rs  ordered_table.rs  range.rs
src/typed/table_ref/: atlatl.rs  mod.rs  ordered_table.rs  range.rs  redb.rs
src/typed/transaction/: error.rs  mod.rs  read.rs  read_new.rs  write.rs  write_new.rs
src/typed/transaction/read/: mod.rs  non_unique.rs  queries.rs
src/typed/transaction/write/: mod.rs
(+68 files in other folders)
